--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 # competition for Thundercleese
 notifications:
   irc: "chat.freenode.net#enigma"
@@ -93,5 +92,14 @@ env:
     # The big ol' None test.
     - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
   #END LINUX
+matrix:
+  include:
+  #BEGIN OSX
+    # Compilers
+    - { os: osx, osx_image: xcode9.2,
+        env: { COMPILER: "clang", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
+    - { os: osx, osx_image: xcode9.2,
+        env: { COMPILER: "gcc", PLATFORM: "None", MODE: "Debug", GRAPHICS: "None", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "None" } }
+  #END OSX
 script:
   - ./ci-build.sh
