--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,9 @@ env:
     - COMPILER=gcc PLATFORM=xlib MODE=Run GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
 matrix:
   include:
-    - env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "Box2DPhysics" }
+    - os: linux
+      dist: trusty
+      env: { COMPILER: "gcc", PLATFORM: "xlib", MODE: "Debug", GRAPHICS: "OpenGL1", AUDIO: "None", COLLISION: "None", NETWORK: "None", WIDGETS: "None", EXTENSIONS: "Box2DPhysics" }
+      install: sudo apt-get -qq -y install libbox2d-dev
 script:
   - ./ci-build.sh
