--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /LinuxExtra/
 /MacOS/build/Release/EnigmaXcode.app/Contents/Info.plist
 /MacOS/build/Release/EnigmaXcode.app/Contents/Resources/*
+/definitions.h
 
 /ENIGMAsystem/SHELL/API_Switchboard.h
 /ENIGMAsystem/SHELL/Preprocessor_Environment_Editable/
