--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,13 @@ before_install:
     if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo dpkg --add-architecture i386;
 
-      sudo apt-get -qq -y install build-essential libglu1-mesa-dev zlib1g-dev libc++-dev gcc-multilib
-      g++-multilib libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libglu1-mesa:i386 libx11-6:i386 libc++-dev:i386
-      mingw-w64 wine libboost-dev libboost-iostreams-dev libboost-filesystem-dev libboost-program-options-dev libboost-system-dev;
-
-      sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so;
-      sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so;
-      sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so;
+      sudo apt-get -qq -y install build-essential libglu1-mesa-dev zlib1g-dev libc++-dev libboost-dev\
+        libboost-iostreams-dev libboost-filesystem-dev libboost-program-options-dev libboost-system-dev;
+      # mingw-w64 wine
+      # gcc-multilib g++-multilib libc6:i386 libncurses5:i386 libstdc++6:i386 lib32z1-dev libglu1-mesa:i386 libx11-6:i386 libc++-dev:i386
+      # sudo ln -s /usr/lib/i386-linux-gnu/mesa/libGL.so.1 /usr/lib/i386-linux-gnu/libGL.so;
+      # sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so;
+      # sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so;
       sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include;
     elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew upgrade gcc || brew install gcc || brew link --overwrite gcc;
