--- a/CommandLine/emake/Makefile
+++ b/CommandLine/emake/Makefile
@@ -16,7 +16,7 @@ EXTRA_SRC_DIR := ../../CompilerSource
 
 PROTO_DIR := ../protos
 CXXFLAGS  := -I$(SRC_DIR) -I$(EXTRA_SRC_DIR) -I../libGMX -I$(PROTO_DIR) -I$(PROTO_DIR)/codegen -std=c++11 -Wall -Wextra -Wpedantic -g
-LDFLAGS   := $(OS_LIBS) -L../libGMX -lGMX -L/mingw64/lib/pugixml-1.8/ -lpugixml -L../../ -lProtocols -lprotobuf
+LDFLAGS   := $(OS_LIBS) -L../libGMX -lGMX -L/mingw64/lib/pugixml-1.8/ -lpugixml -L../../ -lProtocols -lprotobuf -lgrpc++
 
 EXTRA_OBJS := $(patsubst $(EXTRA_SRC_DIR)/%, $(OBJ_DIR)/Extra/%, $(patsubst %.cpp, %.o, $(EXTRA_SOURCES)))
 
