--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
       sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
       sudo apt-get -qq -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev\
         libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libpugixml-dev\
-        libprotobuf-dev protobuf-compiler;
+        libprotobuf-dev protobuf-compiler libgrpc++-dev;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
         sudo dpkg --add-architecture i386;
