--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ install:
 
 # by default most of our jobs will be run on a linux instance
 os: linux
-dist: trusty
+group: travis_latest
 compiler: gcc
 language: cpp
 
