--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_install:
       sudo add-apt-repository -y ppa:maarten-fonville/protobuf;
       sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
       sudo apt-get -qq -y install build-essential zlib1g-dev libboost-dev libboost-iostreams-dev\
-        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libpugixml-dev\
-        rapidjson-dev libprotobuf-dev protobuf-compiler;
+        libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libprotobuf-dev\
+        protobuf-compiler;
 
       if [ "$COMPILER" == "gcc32" ] || [ "$COMPILER" == "clang32" ]; then
         sudo dpkg --add-architecture i386;
@@ -52,7 +52,8 @@ before_install:
       if [ "$TEST_HARNESS" == true ]; then
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
         sudo apt-get update;
-        sudo apt-get -qq -y install cmake libgtest-dev xvfb wmctrl xdotool xfwm4 lcov gcc-7 g++-7 cpp-7 pulseaudio;
+        sudo apt-get -qq -y install cmake libgtest-dev xvfb wmctrl xdotool xfwm4 lcov gcc-7\
+          g++-7 cpp-7 pulseaudio rapidjson-dev libpugixml-dev;
         sudo update-alternatives --remove-all cpp;
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 \
                     15 \
@@ -78,7 +79,12 @@ before_install:
 install:
   - chmod +x ./ci-build.sh
   - make -j4
-  - make -j4 emake
+  - |
+    if [ "$TEST_HARNESS" == true ]; then
+      make -j4 emake
+    else
+      make -j4 emake disable_egm=true
+    fi
 
 # by default most of our jobs will be run on a linux instance
 os: linux
