--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,13 @@ before_install:
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
         sudo apt-get update;
         sudo apt-get -qq -y install cmake libgtest-dev xvfb wmctrl xdotool xfwm4 lcov gcc-7\
-          g++-7 cpp-7 pulseaudio rapidjson-dev libpugixml-dev;
+          g++-7 cpp-7 pulseaudio libpugixml-dev;
+
+        # download rapidjson manually because ubuntu is ancient
+        wget -O rapidjson-mater.zip https://github.com/Tencent/rapidjson/archive/master.zip;
+        unzip rapidjson-master.zip;
+        sudo cp -r rapidjson-master/include /usr/include;
+
         sudo update-alternatives --remove-all cpp;
         sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 \
                     15 \
